fix: refactor code into dfcdocument service + update swagger dfc docs